--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Thankfully, we are born to learn.<br>
         Slowly. Surely. You stumble, slip, crawl, fall and fail and fall.<br>
         Frustrating. Confusing. Trying. Struggling.<br>
-        Until one day, you walk.<br>
+        Until one day, you walk.<strong> <br>
         One foot in front of the other. One idea on top of the next.<br>
         Each wrong answer making your brain a little bit stronger.<br>
         Failing is just another word for growing. And you keep going.<br>
@@ -22,7 +22,7 @@
         You just don’t get it, yet.
         Because the most beautiful, complex concepts in the whole universe<br>
         are built on basic ideas that anyone, anywhere can understand.<br>
-        Whoever you are, wherever you are.<br>
+        Whoever you are, wherever you are.</video><br>
         </p>
         <p>
         You only have to know one thing:<br>
