--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
       <p>
-        Nobody’s born smart. We all start at 0. Can’t talk, can’t walk, certainly can’t do algebra.<br>
+        Nobody’s born smart. We <em>all</em> start at 0. Can’t talk, can’t walk, certainly can’t do algebra.<br>
         Adding, reading, writing, riding a bike. Nobody’s good at anything at first.<br>
-        There was a time when Einstein couldn’t count to 10.<br>
-        And Shakespeare had to learn his ABCs just like the rest of us.<br>
+        There was a time when <strong>EINSTEIN</strong> couldn’t count to 10.<br>
+        And <strong>SHAKESPEARE</strong> had to learn his ABCs just like the rest of us.<br>
         Thankfully, we are born to learn.<br>
         Slowly. Surely. You stumble, slip, crawl, fall and fail and fall.<br>
         Frustrating. Confusing. Trying. Struggling.<br>
@@ -17,16 +17,16 @@
         One foot in front of the other. One idea on top of the next.<br>
         Each wrong answer making your brain a little bit stronger.<br>
         Failing is just another word for growing. And you keep going.<br>
-        This. is. learning.<br>
+        This. is. learning.<br></strong>
         It’s not that you don’t get it. <br>
         You just don’t get it, yet.
-        Because the most beautiful, complex concepts in the whole universe<br>
+        </em>Because the most beautiful, complex concepts in the whole universe<br>
         are built on basic ideas that anyone, anywhere can understand.<br>
-        Whoever you are, wherever you are.</video><br>
+        Whoever you are, wherever you are.</em><br>
         </p>
         <p>
         You only have to know one thing:<br>
-        You can learn anything.
+       <em>you can learn anything.</em>
         </p>
     </body>
 </html>
